force-app/main/default/objects/Kiva_Loan__c/fields/Kiva_ID__c.field-meta.xml
<CustomField>
    <fullName>Kiva_ID__c</fullName>
    <label>Kiva ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>