force-app/main/default/objects/Kiva_Loan__c/fields/Kiva_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan_Amount__c</fullName>
    <label>Loan Amount Requested by Borrower(s)</label>
    <summarizedField>Kiva_Loan_Participation__c.Loan_Amount_needed__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>