force-app/main/default/objects/Kiva_Loan__c/fields/Kiva_Loan_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan_Amount_Approved__c</fullName>
    <label>Kiva Loan Amount Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>