force-app/main/default/objects/Kiva_Loan__c/fields/KIVA_Representative_Code__c.field-meta.xml
<CustomField>
    <fullName>KIVA_Representative_Code__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KIVA Representative Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>