force-app/main/default/objects/Kiva_Loan__c/fields/Kiva_Status__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Status__c</fullName>
    <description>https://kivapartnerhelpcenter.zendesk.com/hc/en-us/articles/360033416572-Lifetime-Loans</description>
    <label>Kiva Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Issue - Awaiting Correction</fullName>
            </value>
            <value>
                <fullName>Issue - Resubmitted</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Raised</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Paying Back</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Defaulted</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>