force-app/main/default/objects/Kiva_Loan__c/fields/last_time_the_group_dispersed_the_saving__c.field-meta.xml
<CustomField>
    <fullName>last_time_the_group_dispersed_the_saving__c</fullName>
    <label>last time the group dispersed the saving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>During the last 1 month</fullName>
            </value>
            <value>
                <fullName>During the last 2-3 months</fullName>
            </value>
            <value>
                <fullName>During the last 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>