force-app/main/default/objects/Kiva_Loan__c/fields/LATEST_Data_Pull_from_Kiva__c.field-meta.xml
<CustomField>
    <fullName>LATEST_Data_Pull_from_Kiva__c</fullName>
    <inlineHelpText>This is in UTC (not your local timezone)</inlineHelpText>
    <label>LATEST Data Pull from Kiva</label>
    <type>DateTime</type>
</CustomField>