force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Approval_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approval_Decision_Date__c</fullName>
    <label>Loan Approval Decision Date</label>
    <type>Date</type>
</CustomField>