force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Description_for_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Loan_Description_for_KIVA__c</fullName>
    <description>This is what will show up in the KIVA website</description>
    <inlineHelpText>This is what will show up in the KIVA website</inlineHelpText>
    <label>Loan Description for KIVA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>