force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Draft_Post_Response__c.field-meta.xml
<CustomField>
    <fullName>Loan_Draft_Post_Response__c</fullName>
    <label>Loan Draft Post Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>