force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Draft_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Draft_Posted_Date__c</fullName>
    <inlineHelpText>When it was LAST posted to KIVA PA2</inlineHelpText>
    <label>Loan Draft Posted Date</label>
    <type>DateTime</type>
</CustomField>