force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Group_Name__c</fullName>
    <label>Loan Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>