force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Name_for_TW_Drill_Down__c.field-meta.xml
<CustomField>
    <fullName>Loan_Name_for_TW_Drill_Down__c</fullName>
    <formula>Main_Applicant_Name__r.Name &amp; Loan_Group_Name__c &amp;&quot; - &quot;&amp;Name</formula>
    <label>Loan Name for TW Drill-Down</label>
    <type>Text</type>
</CustomField>