force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Officer_proposal__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer_proposal__c</fullName>
    <label>Loan Officer proposal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>