force-app/main/default/objects/Kiva_Loan__c/fields/Loan_officer_proposed_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_officer_proposed_Loan_Amount__c</fullName>
    <label>Loan officer proposed Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>