force-app/main/default/objects/Kiva_Loan__c/fields/Loan_officer_proposed_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_officer_proposed_Loan_Term__c</fullName>
    <label>Loan officer proposed Loan Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>