force-app/main/default/objects/Kiva_Loan__c/fields/Loan_officer_provided_adequate_support__c.field-meta.xml
<CustomField>
    <fullName>Loan_officer_provided_adequate_support__c</fullName>
    <label>Loan officer provided adequate support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>