force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Price__c.field-meta.xml
<CustomField>
    <fullName>Loan_Price__c</fullName>
    <description>Loan Price retrieved from GETKivaLoans endpoint (in USD)</description>
    <inlineHelpText>Loan Price retrieved from GETKivaLoans endpoint (in USD)</inlineHelpText>
    <label>Loan Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>