force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Rejection_Date__c</fullName>
    <label>Loan Rejection Date</label>
    <type>Date</type>
</CustomField>