force-app/main/default/objects/Kiva_Loan__c/fields/Loan_Term_Approved__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Approved__c</fullName>
    <label>Loan Term Approved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>