force-app/main/default/objects/Kiva_Loan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <!-- <formula>If(ISBLANK(Distrito__r.Name),&quot;&quot;,Distrito__r.Name &amp; &quot;: Mozambique&quot;)</formula> -->
    <label>Location</label>
    <type>Text</type>
</CustomField>