force-app/main/default/objects/Kiva_Loan__c/fields/Location_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Location_KIVA__c</fullName>
    <!-- <formula>If(ISBLANK(Distrito__r.Name),&quot;&quot;,Distrito__r.Name &amp; &quot;: Mozambique&quot;)</formula> -->
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location (KIVA)</label>
    <type>Text</type>
</CustomField>