force-app/main/default/objects/Kiva_Loan__c/fields/Main_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Applicant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Applicant Name</label>
    <referenceTo>Kiva_Client__c</referenceTo>
    <relationshipLabel>Kiva Loans</relationshipLabel>
    <relationshipName>Kiva_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>