force-app/main/default/objects/Kiva_Loan__c/fields/Main_causes_of_conflict__c.field-meta.xml
<CustomField>
    <fullName>Main_causes_of_conflict__c</fullName>
    <label>Main causes of conflict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>