force-app/main/default/objects/Kiva_Loan__c/fields/Major_challenges_faced_by_the_group__c.field-meta.xml
<CustomField>
    <fullName>Major_challenges_faced_by_the_group__c</fullName>
    <label>Major challenges faced by the group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lack of finance</fullName>
            </value>
            <value>
                <fullName>Lack of technical knowledge</fullName>
            </value>
            <value>
                <fullName>Lack of access to markets</fullName>
            </value>
            <value>
                <fullName>Lack of Transportation</fullName>
            </value>
            <value>
                <fullName>Lack of technology, specify:</fullName>
            </value>
            <value>
                <fullName>Volatility of product prices</fullName>
            </value>
            <value>
                <fullName>Natural disasters</fullName>
            </value>
            <value>
                <fullName>Conflict within the group, cite major causes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>