force-app/main/default/objects/Kiva_Loan__c/fields/Members_provided_loans_within_the_group__c.field-meta.xml
<CustomField>
    <fullName>Members_provided_loans_within_the_group__c</fullName>
    <label>Members provided loans within the group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>