force-app/main/default/objects/Kiva_Loan__c/fields/Monthly_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Net_Income__c</fullName>
    <label>Monthly Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>