force-app/main/default/objects/Kiva_Loan__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income</label>
    <summarizedField>Kiva_Loan_Participation__c.Monthly_Net_Income__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>