force-app/main/default/objects/Kiva_Loan__c/fields/Net_Income_after_Loan__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_after_Loan__c</fullName>
    <label>Net Income after Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>