force-app/main/default/objects/Kiva_Loan__c/fields/Net_Income_change_after_Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_change_after_Kiva_Loan__c</fullName>
    <label>Net Income change after Kiva Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increased</fullName>
            </value>
            <value>
                <fullName>Remained the same</fullName>
            </value>
            <value>
                <fullName>Decreased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>