force-app/main/default/objects/Kiva_Loan__c/fields/Number_of_clients_total__c.field-meta.xml
<CustomField>
    <fullName>Number_of_clients_total__c</fullName>
    <label>Number of clients total</label>
    <summarizedField>Kiva_Loan_Participation__c.of_regular_clients__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>