force-app/main/default/objects/Kiva_Loan__c/fields/NUmber_of_Group_Members__c.field-meta.xml
<CustomField>
    <fullName>NUmber_of_Group_Members__c</fullName>
    <label>Number of Group Members</label>
    <summaryFilterItems>
        <field>Kiva_Loan_Participation__c.Type_of_Application__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </summaryFilterItems>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>