force-app/main/default/objects/Kiva_Loan__c/fields/Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installments__c</fullName>
    <label>Number of Installments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>