force-app/main/default/objects/Kiva_Loan__c/fields/of_agents_worked_with__c.field-meta.xml
<CustomField>
    <fullName>of_agents_worked_with__c</fullName>
    <label># of agents worked with</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>