force-app/main/default/objects/Kiva_Loan__c/fields/of_current_Male_group_members__c.field-meta.xml
<CustomField>
    <fullName>of_current_Male_group_members__c</fullName>
    <label># of current Male group members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>