force-app/main/default/objects/Kiva_Loan__c/fields/of_Customers_that_are_women__c.field-meta.xml
<CustomField>
    <fullName>of_Customers_that_are_women__c</fullName>
    <label>% of Customers that are women</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>