force-app/main/default/objects/Kiva_Loan__c/fields/of_Female_group_Members_Currently__c.field-meta.xml
<CustomField>
    <fullName>of_Female_group_Members_Currently__c</fullName>
    <label># of current Female group members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>