force-app/main/default/objects/Kiva_Loan__c/fields/of_Female_Group_Members_with_M_pesa__c.field-meta.xml
<CustomField>
    <fullName>of_Female_Group_Members_with_M_pesa__c</fullName>
    <label># of Female Group Members with M-pesa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>