force-app/main/default/objects/Kiva_Loan__c/fields/of_Male_group_members_last_year__c.field-meta.xml
<CustomField>
    <fullName>of_Male_group_members_last_year__c</fullName>
    <label># of Male group members last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>