force-app/main/default/objects/Kiva_Loan__c/fields/of_regular_Customers__c.field-meta.xml
<CustomField>
    <fullName>of_regular_Customers__c</fullName>
    <label># of regular Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>