force-app/main/default/objects/Kiva_Loan__c/fields/of_suppliers_buy_inputs_from__c.field-meta.xml
<CustomField>
    <fullName>of_suppliers_buy_inputs_from__c</fullName>
    <label># of suppliers buy inputs from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>