force-app/main/default/objects/Kiva_Loan__c/fields/of_times_trainings_attended__c.field-meta.xml
<CustomField>
    <fullName>of_times_trainings_attended__c</fullName>
    <label># of times trainings attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>