force-app/main/default/objects/Kiva_Loan__c/fields/Other_business_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Other_business_decision_maker__c</fullName>
    <label>Other business decision maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>