force-app/main/default/objects/Kiva_Loan__c/fields/Other_climate_smart_technologies__c.field-meta.xml
<CustomField>
    <fullName>Other_climate_smart_technologies__c</fullName>
    <label>Other climate smart technologies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>