force-app/main/default/objects/Kiva_Loan__c/fields/Other_Document_2_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_Document_2_URL__c</fullName>
    <label>Other Document 2 URL</label>
    <type>Url</type>
</CustomField>