force-app/main/default/objects/Kiva_Loan__c/fields/Other_Impact_of_Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Other_Impact_of_Kiva_Loan__c</fullName>
    <label>Other Impact of Kiva Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>