force-app/main/default/objects/Kiva_Loan__c/fields/Other_specific_things_done_for_clients__c.field-meta.xml
<CustomField>
    <fullName>Other_specific_things_done_for_clients__c</fullName>
    <label>Other specific things done for clients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>