force-app/main/default/objects/Kiva_Loan__c/fields/Other_things_done_for_clients__c.field-meta.xml
<CustomField>
    <fullName>Other_things_done_for_clients__c</fullName>
    <label>Other things done for clients</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provide quality agricultural inputs on credit paid at harvest time</fullName>
            </value>
            <value>
                <fullName>Host an ECPA</fullName>
            </value>
            <value>
                <fullName>Conduct technical trainings and advice</fullName>
            </value>
            <value>
                <fullName>Lend parcel of land for them to produce</fullName>
            </value>
            <value>
                <fullName>Provide transport service at accessible price</fullName>
            </value>
            <value>
                <fullName>Inform on weather, prices and market conditions</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>