force-app/main/default/objects/Kiva_Loan__c/fields/Outstanding_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Principal_Balance__c</fullName>
    <description>This is an Automatic Field, updated by a flow</description>
    <inlineHelpText>This is the Kiva loam Amount still due</inlineHelpText>
    <label>Outstanding Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>