force-app/main/default/objects/Kiva_Loan__c/fields/Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Amount__c</fullName>
    <formula>IF( Expected_Collected_gap__c &gt;0, Expected_Collected_gap__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>