force-app/main/default/objects/Kiva_Loan__c/fields/Planned_Expiration_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Planned_Expiration_Time_KIVA__c</fullName>
    <label>Planned Expiration Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>