force-app/main/default/objects/Kiva_Loan__c/fields/Planned_Inactive_Expire_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Planned_Inactive_Expire_Time_KIVA__c</fullName>
    <label>Planned Inactive Expire Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>