force-app/main/default/objects/Kiva_Loan__c/fields/Position_in_the_Agricultural_Value_Chain__c.field-meta.xml
<CustomField>
    <fullName>Position_in_the_Agricultural_Value_Chain__c</fullName>
    <label>Position in the Agricultural Value Chain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small Producer (1-3 hectares or lesser in total)</fullName>
            </value>
            <value>
                <fullName>Large Producer</fullName>
            </value>
            <value>
                <fullName>Trader of Grains</fullName>
            </value>
            <value>
                <fullName>Trader of vegetables</fullName>
            </value>
            <value>
                <fullName>Trader of Inputs</fullName>
            </value>
            <value>
                <fullName>Agro-dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>