force-app/main/default/objects/Kiva_Loan__c/fields/Posto_Admin_Code__c.field-meta.xml
<CustomField>
    <fullName>Posto_Admin_Code__c</fullName>
    <formula>Posto_Administrativo__r.Posto_Administrativo_Code__c</formula>
    <label>Posto Admin Code</label>
    <type>Text</type>
</CustomField>