force-app/main/default/objects/Kiva_Loan__c/fields/Posto_Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Posto_Administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Posto Administrativo</label>
    <referenceTo>MZ_Posto_Administrativo__c</referenceTo>
    <relationshipLabel>Kiva Loans</relationshipLabel>
    <relationshipName>Kiva_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>