force-app/main/default/objects/Kiva_Loan__c/fields/Previous_Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Previous_Kiva_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Kiva Loan</label>
    <referenceTo>Kiva_Loan__c</referenceTo>
    <relationshipLabel>Kiva Loans</relationshipLabel>
    <relationshipName>Kiva_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>