force-app/main/default/objects/Kiva_Loan__c/fields/Prior_Loan_Institution__c.field-meta.xml
<CustomField>
    <fullName>Prior_Loan_Institution__c</fullName>
    <label>Prior Loan Institution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Microfinance Institution</fullName>
            </value>
            <value>
                <fullName>Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Local moneylender</fullName>
            </value>
            <value>
                <fullName>Savings group</fullName>
            </value>
            <value>
                <fullName>GAPI</fullName>
            </value>
            <value>
                <fullName>Non Profit Organization (eg CARE)</fullName>
            </value>
            <value>
                <fullName>Cooperative bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>