force-app/main/default/objects/Kiva_Loan__c/fields/producers_do_you_buy_products_from__c.field-meta.xml
<CustomField>
    <fullName>producers_do_you_buy_products_from__c</fullName>
    <label># producers buy products from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>