force-app/main/default/objects/Kiva_Loan__c/fields/Profile_Photo_image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_image__c</fullName>
    <formula>IF (ISBLANK(  Profile_Photo__c  ),
&quot;No Photo&quot;,
HYPERLINK(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Profile_Photo__c  , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Profile_Photo__c  , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) ) ,
IMAGE(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Profile_Photo__c  , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Profile_Photo__c  , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) )
, &quot;Enlarge Customer Photo&quot;, 320, 240)
)
)</formula>
    <label>Profile Photo Image</label>
    <type>Text</type>
</CustomField>