force-app/main/default/objects/Kiva_Loan__c/fields/Profile_Photo_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_Public_URL__c</fullName>
    <label>Profile Photo (Public) URL</label>
    <type>Url</type>
</CustomField>