force-app/main/default/objects/Kiva_Loan__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <formula>Distrito__r.Provincia__r.Name</formula>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>