force-app/main/default/objects/Kiva_Loan__c/fields/Purpose_of_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_Loan__c</fullName>
    <label>Purpose of the Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>