force-app/main/default/objects/Kiva_Loan__c/fields/Reason_for_delinquency_in_Previous_Loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_delinquency_in_Previous_Loan__c</fullName>
    <label>Reason for delinquency in Previous Loan</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>