force-app/main/default/objects/Kiva_Loan__c/fields/Reason_for_inocme_Change_after_Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_inocme_Change_after_Kiva_Loan__c</fullName>
    <label>Reason for income Change after Kiva Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>