force-app/main/default/objects/Kiva_Loan__c/fields/Reason_to_Support_this_loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Support_this_loan__c</fullName>
    <label>Reason to Support this loan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>