force-app/main/default/objects/Kiva_Loan__c/fields/Refunded_Time_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Time_KIVA__c</fullName>
    <label>Refunded Time (KIVA)</label>
    <type>DateTime</type>
</CustomField>