force-app/main/default/objects/Kiva_Loan__c/fields/Repeat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Frequency__c</fullName>
    <label>Repeat Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>