force-app/main/default/objects/Kiva_Loan__c/fields/Risky_Loans_Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Risky_Loans_Borrowers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Monitor more closely</inlineHelpText>
    <label>Risky Loans/Borrowers</label>
    <type>Checkbox</type>
</CustomField>