force-app/main/default/objects/Kiva_Loan__c/fields/Savings_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Savings_Frequency__c</fullName>
    <label>Savings Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per week</fullName>
            </value>
            <value>
                <fullName>Per month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>